# mp2722-driver

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  library.properties
.github/workflows/: ci.yml
docs/: INT_LIST.csv  OTP_MAP.csv  REG_MAP_CONFIG.csv  REG_MAP_STATUS.csv
examples/: MP2722_Arduino.ino  MP2722_ESP-IDF.cpp  MP2722_STM32.cpp
examples/Arduino/: MP2722_Arduino.ino  MP2722_Arduino_custom_i2c.ino
examples/Custom I2C interface/: MP2722_Arduino.ino  MP2722_ESP-IDF.cpp  MP2722_STM32.cpp
examples/ESP-IDF/: MP2722_ESP32-ESP-IDF.cpp  MP2722_ESP32-ESP-IDF_custom_i2c.cpp
examples/STM32Cube/: MP2722_STM32.cpp  MP2722_STM32_custom_i2c.cpp  stm32_hal_conf.h  stm32f4xx_hal_conf.h
src/: MP2722.cpp  MP2722.h  MP2722_defs.h  MP2722_platform.cpp  MP2722_platform.h  MP2722_regs.h
test/: CMakeLists.txt  mock_platform.cpp  test_mp2722.cpp
